storage/innobase/os/os0file.cc
@@ -2,7 +2,7 @@
 
 Copyright (c) 1995, 2015, Oracle and/or its affiliates. All Rights Reserved.
 Copyright (c) 2009, Percona Inc.
-Copyright (c) 2013, 2015, MariaDB Corporation.
+Copyright (c) 2013, 2016, MariaDB Corporation.
 
 Portions of this file contain modifications contributed and copyrighted
 by Percona Inc.. Those modifications are
@@ -1350,7 +1350,8 @@ os_file_create_simple_func(
 
 		access = GENERIC_READ;
 
-	} else if (access_type == OS_FILE_READ_WRITE) {
+	} else if (access_type == OS_FILE_READ_WRITE
+		   || access_type == OS_FILE_READ_WRITE_CACHED) {
 		access = GENERIC_READ | GENERIC_WRITE;
 	} else {
 		ib_logf(IB_LOG_LEVEL_ERROR,
@@ -1454,7 +1455,8 @@ os_file_create_simple_func(
 #ifdef USE_FILE_LOCK
 	if (!srv_read_only_mode
 	    && *success
-	    && access_type == OS_FILE_READ_WRITE
+	    && (access_type == OS_FILE_READ_WRITE
+		|| access_type == OS_FILE_READ_WRITE_CACHED)
 	    && os_file_lock(file, name)) {
 
 		*success = FALSE;
@@ -1466,6 +1468,31 @@ os_file_create_simple_func(
 #endif /* __WIN__ */
 
 	return(file);
+}
+
+/** Disable OS I/O caching on the file if the file type and server
+configuration requires it.
+@param file handle to the file
+@param name name of the file, for diagnostics
+@param mode_str operation on the file, for diagnostics
+@param type OS_LOG_FILE or OS_DATA_FILE
+@param access_type if OS_FILE_READ_WRITE_CACHED, then caching will be disabled
+unconditionally, ignored otherwise */
+static
+void
+os_file_set_nocache_if_needed(os_file_t file, const char* name,
+                             const char *mode_str, ulint type,
+                             ulint access_type)
+{
+       if (srv_read_only_mode || access_type == OS_FILE_READ_WRITE_CACHED) {
+               return;
+       }
+
+       if (type == OS_DATA_FILE
+           && (srv_unix_file_flush_method == SRV_UNIX_O_DIRECT
+               || (srv_unix_file_flush_method == SRV_UNIX_O_DIRECT_NO_FSYNC))) {
+               os_file_set_nocache(file, name, mode_str);
+       }
 }
 
 /****************************************************************//**
@@ -1523,7 +1550,8 @@ os_file_create_simple_no_error_handling_func(
 		access = GENERIC_READ;
 	} else if (srv_read_only_mode) {
 		access = GENERIC_READ;
-	} else if (access_type == OS_FILE_READ_WRITE) {
+	} else if (access_type == OS_FILE_READ_WRITE
+		   || access_type == OS_FILE_READ_WRITE_CACHED) {
 		access = GENERIC_READ | GENERIC_WRITE;
 	} else if (access_type == OS_FILE_READ_ALLOW_DELETE) {
 
@@ -1595,7 +1623,8 @@ os_file_create_simple_no_error_handling_func(
 		} else {
 
 			ut_a(access_type == OS_FILE_READ_WRITE
-			     || access_type == OS_FILE_READ_ALLOW_DELETE);
+				|| access_type == OS_FILE_READ_ALLOW_DELETE
+				|| access_type == OS_FILE_READ_WRITE_CACHED);
 
 			create_flag = O_RDWR;
 		}
@@ -1627,18 +1656,16 @@ os_file_create_simple_no_error_handling_func(
 	/* This function is always called for data files, we should disable
 	OS caching (O_DIRECT) here as we do in os_file_create_func(), so
 	we open the same file in the same mode, see man page of open(2). */
-	if (!srv_read_only_mode
-	    && *success
-	    && (srv_unix_file_flush_method == SRV_UNIX_O_DIRECT
-		|| srv_unix_file_flush_method == SRV_UNIX_O_DIRECT_NO_FSYNC)) {
-
-		os_file_set_nocache(file, name, mode_str);
+	if (*success) {
+		os_file_set_nocache_if_needed(file, name, mode_str,
+			OS_DATA_FILE, access_type);
 	}
 
 #ifdef USE_FILE_LOCK
 	if (!srv_read_only_mode
 	    && *success
-	    && access_type == OS_FILE_READ_WRITE
+	    && (access_type == OS_FILE_READ_WRITE
+		|| access_type == OS_FILE_READ_WRITE_CACHED)
 	    && os_file_lock(file, name)) {
 
 		*success = FALSE;
@@ -1677,7 +1704,7 @@ UNIV_INTERN
 void
 os_file_set_nocache(
 /*================*/
-	int		fd		/*!< in: file descriptor to alter */
+	os_file_t	fd		/*!< in: file descriptor to alter */
 					__attribute__((unused)),
 	const char*	file_name	/*!< in: used in the diagnostic
 					message */
@@ -2007,13 +2034,8 @@ os_file_create_func(
 
 	/* We disable OS caching (O_DIRECT) only on data files */
 
-	if (!srv_read_only_mode
-	    && *success
-	    && type != OS_LOG_FILE
-	    && (srv_unix_file_flush_method == SRV_UNIX_O_DIRECT
-		|| srv_unix_file_flush_method == SRV_UNIX_O_DIRECT_NO_FSYNC)) {
-
-		os_file_set_nocache(file, name, mode_str);
+	if (*success) {
+		os_file_set_nocache_if_needed(file, name, mode_str, type, 0);
 	}
 
 #ifdef USE_FILE_LOCK
