storage/xtradb/os/os0file.cc
@@ -2,7 +2,7 @@
 
 Copyright (c) 1995, 2015, Oracle and/or its affiliates. All Rights Reserved.
 Copyright (c) 2009, Percona Inc.
-Copyright (c) 2013, 2015, MariaDB Corporation.
+Copyright (c) 2013, 2016, MariaDB Corporation.
 
 Portions of this file contain modifications contributed and copyrighted
 by Percona Inc.. Those modifications are
@@ -1422,7 +1422,8 @@ os_file_create_simple_func(
 
 		access = GENERIC_READ;
 
-	} else if (access_type == OS_FILE_READ_WRITE) {
+	} else if (access_type == OS_FILE_READ_WRITE
+		   || access_type == OS_FILE_READ_WRITE_CACHED) {
 		access = GENERIC_READ | GENERIC_WRITE;
 	} else {
 		ib_logf(IB_LOG_LEVEL_ERROR,
@@ -1526,7 +1527,8 @@ os_file_create_simple_func(
 #ifdef USE_FILE_LOCK
 	if (!srv_read_only_mode
 	    && *success
-	    && access_type == OS_FILE_READ_WRITE
+	    && (access_type == OS_FILE_READ_WRITE
+		|| access_type == OS_FILE_READ_WRITE_CACHED)
 	    && os_file_lock(file, name)) {
 
 		*success = FALSE;
@@ -1554,15 +1556,16 @@ os_file_set_nocache_if_needed(os_file_t file, const char* name,
 			      const char *mode_str, ulint type,
 			      ulint access_type)
 {
-	if (srv_read_only_mode || access_type == OS_FILE_READ_WRITE_CACHED)
+	if (srv_read_only_mode || access_type == OS_FILE_READ_WRITE_CACHED) {
 		return;
+	}
 
 	if (srv_unix_file_flush_method == SRV_UNIX_ALL_O_DIRECT
-	    || (type != OS_LOG_FILE
+	    || (type == OS_LOG_FILE
 		&& (srv_unix_file_flush_method == SRV_UNIX_O_DIRECT
-		    || (srv_unix_file_flush_method
-			== SRV_UNIX_O_DIRECT_NO_FSYNC))))
+		    || (srv_unix_file_flush_method == SRV_UNIX_O_DIRECT_NO_FSYNC)))) {
 		os_file_set_nocache(file, name, mode_str);
+	}
 }
 
 /****************************************************************//**
@@ -2154,8 +2157,9 @@ os_file_create_func(
 
 	} while (retry);
 
-	if (*success) {
+	/* We disable OS caching (O_DIRECT) only on data files */
 
+	if (*success) {
 		os_file_set_nocache_if_needed(file, name, mode_str, type, 0);
 	}
 
